Added settings Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="dark">#1E1E1E</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FEC007</color>
     <color name="yellow_light">#ffecb3</color>
     <color name="yellow_dark">#8c3d00</color>
-    <color name="gray">#969696</color>
+    <color name="gray">#323232</color>
+    <color name="light_gray">#535353</color>
 </resources>
