--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -19,7 +19,7 @@
             android:background="@color/yellow"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:theme="@style/ToolbarTheme"
-            app:titleTextColor="@color/black" />
+            app:titleTextColor="@color/dark" />
 
         <ScrollView
             android:layout_width="match_parent"
