--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-<item android:id="@+id/action_help"
-    android:title="@string/help"
-    android:icon="@drawable/outline_help_outline_black_36"
-    android:orderInCategory="1"
-    app:showAsAction="always" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/outline_settings_black_36dp"
+        android:orderInCategory="1"
+        android:title="@string/settings"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_help"
+        android:icon="@drawable/outline_help_outline_black_36"
+        android:orderInCategory="1"
+        android:title="@string/help"
+        app:showAsAction="always" />
+
 </menu>
