--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <!-- Customize color of navigation drawer icon and back arrow -->
-        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlNormal">@color/dark</item>
     </style>
 
 </resources>
