--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,14 +8,14 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/yellow</item>
         <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="colorOnSecondary">@color/dark</item>
+        <item name="android:textColor">@color/dark</item>
         <item name="android:editTextColor">@color/yellow_dark</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
-<item name="android:textSize">25sp</item>
+<item name="android:textSize">20sp</item>
     </style>
 </resources>
