--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,13 +24,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            style="@style/background_style"
+            >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_margin="10dp">
                 <TextView
+                    style="@style/text_color"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -38,6 +43,7 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
                 <TextView
+                    style="@style/text_color"
                     android:id="@+id/seekBarValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -48,13 +54,15 @@
                     app:layout_constraintTop_toTopOf="parent" />
             </LinearLayout>
             <SeekBar
+                android:theme="@style/text_color"
                 android:id="@+id/seekBar"
+
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_margin="10dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:max="25"
                 android:min="5"
-                android:progress="25"
+
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/seekBarValue" />
@@ -62,24 +70,25 @@
 
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white" />
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            style="@style/background_style">
+
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/password_complexity"
-                android:textColor="@color/yellow_light" />
+                android:layout_margin="10dp"
+                android:theme="@style/text_color" />
         </LinearLayout>
 
     </LinearLayout>
