--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,16 +2,16 @@
     <!-- Base application theme. -->
     <style name="Theme.PasswordGenerator" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/yellow</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/dark</item>
         <item name="colorOnPrimary">@color/dark</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/yellow</item>
+        <item name="colorSecondary">@color/text_light</item>
 
         <item name="colorSecondaryVariant">@color/dark</item>
-        <item name="colorOnSecondary">@color/yellow_light</item>
-        <item name="android:textColor">@color/yellow_light</item>
-        <item name="android:editTextColor">@color/yellow_light</item>
+        <item name="colorOnSecondary">@color/text_light</item>
+        <item name="android:textColor">@color/text_light</item>
+        <item name="android:editTextColor">@color/white</item>
         //цвет фона
         <item name="android:colorBackground">#141414</item>
 
@@ -20,5 +20,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="my" parent="Theme.PasswordGenerator" >
+        <item name="android:background">@color/dark_for_password</item>
+        <item name="android:textColor">@color/text_dark</item>
+    </style>
+
+    <style name="button_style" parent="Theme.PasswordGenerator">
+        <item name="colorPrimary">@color/yellow</item>
+       <item name="android:textColor">@color/text_dark</item>
     </style>
 </resources>
