--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,9 @@
                        android:singleLine="true" />-->
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    app:passwordToggleEnabled="true"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/get_site_name"
@@ -54,6 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
                         android:layout_marginTop="10dp"
+                        android:inputType="textPassword"
                         android:hint="@string/location"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -61,7 +64,8 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/get_key_word"
@@ -69,20 +73,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
                         android:layout_marginVertical="10dp"
+                        android:inputType="textPassword"
                         android:hint="@string/key_word"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
-                <!--   <TextView
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:text="@string/key_word" />
 
-                   <EditText
-                       android:id="@+id/get_key_word"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:gravity="center"
-                       android:singleLine="true" />-->
             </LinearLayout>
 
 
@@ -108,6 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:gravity="center"
+
                     android:textSize="25sp"
                     style="@style/password_output_style" />
 
