--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:passwordToggleEnabled="true"
+                    app:passwordToggleEnabled="false"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
                         android:layout_marginTop="10dp"
-                        android:inputType="textPassword"
+                        android:inputType="text"
                         android:hint="@string/location"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -65,7 +65,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:passwordToggleEnabled="true">
+                    app:passwordToggleEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/get_key_word"
@@ -73,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
                         android:layout_marginVertical="10dp"
-                        android:inputType="textPassword"
+                        android:inputType="text"
                         android:hint="@string/key_word"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
