--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -91,6 +91,46 @@
                 android:theme="@style/text_color" />
         </LinearLayout>
 
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            style="@style/background_style">
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchForHideUserData"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hide_user_data"
+                android:layout_margin="10dp"
+                android:theme="@style/text_color" />
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            style="@style/background_style">
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchForTypeOfModelGeneration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/password_generation_model"
+                android:layout_margin="10dp"
+                android:theme="@style/text_color" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
